--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<input type="text" readonly>
 	<div class="controls">
 		<button id="left" class="fas fa-arrow-alt-circle-left left"></button>
-		<button id="right" class="fas fa-arrow-alt-circle-right right"> </button>
 		<button id="up" class="fas fa-arrow-alt-circle-up up"></button>
 		<button id="down" class="fas fa-arrow-alt-circle-down down"></button>
+		<button id="right" class="fas fa-arrow-alt-circle-right right"> </button>
 		
 	</div>
 
@@ -25,21 +25,38 @@
 
 	<div class="modal">
 		<h2 class="title">Выберите уровень сложности</h2>
-		<div class="button easy button-controls"><span>Easy</span></div>
+		<div class="button easy"><span>Easy</span></div>
 		<div class="button normal"><span>Normal</span></div>
 		<div class="button hard"><span>Hard</span></div>
 	</div>
 
-	<!-- <div class="modalControl">
-		<div class="control-window"><h2>Управление</h2>
-			<div>Стрелка вправо - вправо</div>
-			<div>Стрелка влево - влео</div>
-			<div>Стрелка вверх - перерворот</div>
-			<div>Стрелка вниз - ускорение фигуры</div>
-			<button class="button-controls okay"><span>Понятно</span></button>
-		</div>
+	<div class="modalControl">
+		<div class="control-window">
+			<h2 class="title-control">Управление</h2>
+			<div class="control-items">
+			<div class="control-item1">
+				<div class="subtitle">вправо</div>
+				<div id="right" class="fas fa-arrow-alt-circle-right right"></div>
+			</div>
+			<div class="control-item2">
+				<div class="subtitle">влево</div>
+				<div id="left" class="fas fa-arrow-alt-circle-left left"></div>
+			</div>
+
+			<div class="control-item3">
+				<div class="subtitle">перерворот</div>
+				<div id="up" class="fas fa-arrow-alt-circle-up up"></div>
+			</div>
+
+			<div class="control-item4">
+				<div class="subtitle">ускорение фигуры</div>
+				<div id="down" class="fas fa-arrow-alt-circle-down down"></div>
+			</div>
+		</div>	
 	</div>
- -->
+		<button class="button-okay okay"><span>Понятно</span></button>
+	</div>
+ 
 <script src="js/app.js"></script>		
 </body>
 </html>
