--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</div>
 
 			<div class="control-item3">
-				<div class="subtitle">перерворот</div>
+				<div class="subtitle">переворот</div>
 				<div id="up" class="fas fa-arrow-alt-circle-up up"></div>
 			</div>
 
@@ -55,6 +55,10 @@
 		</div>	
 	</div>
 		<button class="button-okay okay"><span>Понятно</span></button>
+	</div>
+	<div class="modalscreen">
+			<h2 class="modal-title">Tetris</h2>
+			<button class="button-start start"><span>Start</span></button>
 	</div>
  
 <script src="js/app.js"></script>		
