--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<button id="up" class="fas fa-arrow-alt-circle-up up"></button>
 		<button id="down" class="fas fa-arrow-alt-circle-down down"></button>
 		<button id="right" class="fas fa-arrow-alt-circle-right right"> </button>
-		
+		<audio class="sound-tetris" src="assets/sound/zvuk.mp3" autoplay="autoplay" loop="loop"></audio>
 	</div>
 
 	<div class="overlay"></div>
