--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<title>Tetris</title>
 </head>
 <body>
-	
+	<audio id="sound-tetris" src="assets/sound/zvuk.mp3" autoplay="autoplay" loop="loop" type="audio/mpeg"></audio>
 	<div class="main"></div>
-	<audio class="sound-tetris" src="assets/sound/zvuk.mp3" autoplay="autoplay" loop="loop"></audio>
+	
 	<input type="text" readonly>
 	<div class="controls">
 		<button id="left" class="fas fa-arrow-alt-circle-left left"></button>
