--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Tetris</title>
 </head>
 <body>
-	<audio id="sound-tetris" src="assets/sound/zvuk.mp3" autoplay="autoplay" loop="loop" type="audio/mpeg"></audio>
+	<audio id="sound-tetris" controls src="assets/sound/zvuk.mp3" autoplay loop="loop" type="audio/mpeg"></audio>
 	<div class="main"></div>
 	
 	<input type="text" readonly>
